create user-delete [softDelete, forceDelete]

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14484,5 +14484,7 @@ dl {
   -webkit-box-flex: 1;
   -ms-flex-positive: 1;
   flex-grow: 1; }
-
+.btn-delete {
+  min-width: calc(50% - 2px);
+}
 /*# sourceMappingURL=style.css.map */
